--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "accepts",
-  "description": "Higher-level content negotiation",
-  "version": "2.0.0",
+  "name": "body-parser",
+  "description": "Node.js body parsing middleware",
+  "version": "2.2.0",
   "contributors": [
     "Douglas Christopher Wilson <doug@somethingdoug.com>",
     "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)"
   ],
   "license": "MIT",
-  "repository": "jshttp/accepts",
+  "repository": "expressjs/body-parser",
   "dependencies": {
-    "mime-types": "^3.0.0",
-    "negotiator": "^1.0.0"
+    "bytes": "^3.1.2",
+    "content-type": "^1.0.5",
+    "debug": "^4.4.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.6.3",
+    "on-finished": "^2.4.1",
+    "qs": "^6.14.0",
+    "raw-body": "^3.0.0",
+    "type-is": "^2.0.0"
   },
   "devDependencies": {
-    "deep-equal": "1.0.1",
-    "eslint": "7.32.0",
+    "eslint": "8.34.0",
     "eslint-config-standard": "14.1.1",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-markdown": "2.2.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-standard": "4.1.0",
-    "mocha": "9.2.0",
-    "nyc": "15.1.0"
+    "mocha": "^11.1.0",
+    "nyc": "^17.1.0",
+    "supertest": "^7.0.0"
   },
   "files": [
+    "lib/",
     "LICENSE",
     "HISTORY.md",
     "index.js"
   ],
   "engines": {
-    "node": ">= 0.6"
+    "node": ">=18"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha --reporter spec --check-leaks --bail test/",
-    "test-ci": "nyc --reporter=lcov --reporter=text npm test",
+    "test": "mocha --reporter spec --check-leaks test/",
+    "test-ci": "nyc --reporter=lcovonly --reporter=text npm test",
     "test-cov": "nyc --reporter=html --reporter=text npm test"
-  },
-  "keywords": [
-    "content",
-    "negotiation",
-    "accept",
-    "accepts"
-  ]
+  }
 }
