--- a/package.json
+++ b/package.json
@@ -1,49 +1,42 @@
 {
-  "name": "body-parser",
-  "description": "Node.js body parsing middleware",
-  "version": "2.2.0",
+  "name": "bytes",
+  "description": "Utility to parse a string bytes to bytes and vice-versa",
+  "version": "3.1.2",
+  "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
   "contributors": [
-    "Douglas Christopher Wilson <doug@somethingdoug.com>",
-    "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)"
+    "Jed Watson <jed.watson@me.com>",
+    "Théo FIDRY <theo.fidry@gmail.com>"
   ],
   "license": "MIT",
-  "repository": "expressjs/body-parser",
-  "dependencies": {
-    "bytes": "^3.1.2",
-    "content-type": "^1.0.5",
-    "debug": "^4.4.0",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.6.3",
-    "on-finished": "^2.4.1",
-    "qs": "^6.14.0",
-    "raw-body": "^3.0.0",
-    "type-is": "^2.0.0"
-  },
+  "keywords": [
+    "byte",
+    "bytes",
+    "utility",
+    "parse",
+    "parser",
+    "convert",
+    "converter"
+  ],
+  "repository": "visionmedia/bytes.js",
   "devDependencies": {
-    "eslint": "8.34.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-markdown": "3.0.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-standard": "4.1.0",
-    "mocha": "^11.1.0",
-    "nyc": "^17.1.0",
-    "supertest": "^7.0.0"
+    "eslint": "7.32.0",
+    "eslint-plugin-markdown": "2.2.1",
+    "mocha": "9.2.0",
+    "nyc": "15.1.0"
   },
   "files": [
-    "lib/",
+    "History.md",
     "LICENSE",
-    "HISTORY.md",
+    "Readme.md",
     "index.js"
   ],
   "engines": {
-    "node": ">=18"
+    "node": ">= 0.8"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha --reporter spec --check-leaks test/",
-    "test-ci": "nyc --reporter=lcovonly --reporter=text npm test",
+    "test": "mocha --check-leaks --reporter spec",
+    "test-ci": "nyc --reporter=lcov --reporter=text npm test",
     "test-cov": "nyc --reporter=html --reporter=text npm test"
   }
 }
